made index on array constants, used toList() without calling collections, rename stream lambda expression parameters and shortened some of the code