@@ -1,10 +1,8 @@
 package practice;
 
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import model.Candidate;
 import model.Cat;
@@ -20,9 +18,9 @@ public class StreamPractice {
      */
     public int findMinEvenNumber(List<String> numbers) throws RuntimeException {
         return numbers.stream()
-                .flatMap(n -> Arrays.stream(n.split(",")))
+                .flatMap(numb -> Arrays.stream(numb.split(",")))
                 .mapToInt(Integer::valueOf)
-                .filter(n -> n % 2 == 0)
+                .filter(numb -> numb % 2 == 0)
                 .min()
                 .orElseThrow(() -> new RuntimeException("Can't get min value from list:"
                         + numbers));
@@ -35,8 +33,9 @@ public class StreamPractice {
      */
     public Double getOddNumsAverage(List<Integer> numbers) throws NoSuchElementException {
         return IntStream.range(0, numbers.size())
-                .mapToDouble(i -> i % 2 != 0 ? numbers.get(i) - 1 : numbers.get(i))
-                .filter(n -> n % 2 != 0)
+                .mapToDouble(index -> index % 2 != 0
+                        ? numbers.get(index) - 1 : numbers.get(index))
+                .filter(numb -> numb % 2 != 0)
                 .average()
                 .orElseThrow(NoSuchElementException::new);
     }
@@ -51,10 +50,10 @@ public class StreamPractice {
      */
     public List<Person> selectMenByAge(List<Person> peopleList, int fromAge, int toAge) {
         return peopleList.stream()
-                .filter(p -> p.getSex() == Person.Sex.MAN
-                        && p.getAge() >= fromAge
-                        && p.getAge() <= toAge)
-                .collect(Collectors.toList());
+                .filter(person -> person.getSex() == Person.Sex.MAN
+                        && person.getAge() >= fromAge
+                        && person.getAge() <= toAge)
+                .toList();
     }
 
     /**
@@ -70,12 +69,12 @@ public class StreamPractice {
     public List<Person> getWorkablePeople(int fromAge, int femaleToAge,
                                           int maleToAge, List<Person> peopleList) {
         return peopleList.stream()
-                .filter(p -> p.getAge() >= fromAge
-                        && ((p.getSex() == Person.Sex.MAN
-                        && p.getAge() <= maleToAge)
-                        || (p.getSex() == Person.Sex.WOMAN
-                        && p.getAge() <= femaleToAge)))
-                .collect(Collectors.toList());
+                .filter(person -> person.getAge() >= fromAge
+                        && ((person.getSex() == Person.Sex.MAN
+                        && person.getAge() <= maleToAge)
+                        || (person.getSex() == Person.Sex.WOMAN
+                        && person.getAge() <= femaleToAge)))
+                .toList();
     }
 
     /**
@@ -85,13 +84,12 @@ public class StreamPractice {
      */
     public List<String> getCatsNames(List<Person> peopleList, int femaleAge) {
         return peopleList.stream()
-                .filter(p -> p.getSex() == Person.Sex.WOMAN
-                        && p.getAge() >= femaleAge
-                        && !p.getCats().isEmpty())
-                .map(Person::getCats)
-                .flatMap(Collection::stream)
+                .filter(person -> person.getSex() == Person.Sex.WOMAN
+                        && person.getAge() >= femaleAge
+                        && !person.getCats().isEmpty())
+                .flatMap(person -> person.getCats().stream())
                 .map(Cat::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -108,9 +106,9 @@ public class StreamPractice {
      */
     public List<String> validateCandidates(List<Candidate> candidates) {
         return candidates.stream()
-                .filter(new CandidateValidator()::test)
+                .filter(new CandidateValidator())
                 .map(Candidate::getName)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 }
